<resources>
    <string name="app_name">young</string>

    <integer name="one">1</integer>
    <integer name="two">2</integer>
    <integer name="three">3</integer>
    <integer name="four">4</integer>
    <integer name="five">5</integer>
    <integer name="six">6</integer>
    <integer name="seven">7</integer>
    <integer name="eight">8</integer>
    <integer name="nine">9</integer>

    <string name="tab_mine">我的</string>
    <string name="tab_discover">发现</string>
    <string name="tab_young">young</string>
    <string name="tab_video">视频</string>
    <string name="recommend_calender">每日推荐</string>
    <string name="recommend_live">直播</string>
    <string name="recommend_station">电台</string>
    <string name="recommend_rank">排行榜</string>
    <string name="recommend_songlist">歌单</string>
    <string name="template_name">Young Man</string>
    <string name="local_music">本地音乐</string>
    <string name="add">添加</string>
    <string name="remove">删除</string>
    <string name="test_data">测试数据</string>
    <string name="creator_center">创作者中心</string>
    <string name="listen_and_get_music">听歌识曲</string>
    <string name="show">演出</string>
    <string name="shopping_mall">商城</string>
    <string name="person_around">附近的人</string>
    <string name="game_recommend">游戏推荐</string>
    <string name="pocket_music">口袋彩铃</string>
    <string name="my_order">我的订单</string>
    <string name="stop_at_time">定时停止播放</string>
    <string name="scan">扫一扫</string>
    <string name="music_alarm">音乐闹钟</string>
    <string name="music_cloud">音乐云盘</string>
    <string name="listen_without_flow">在线听歌免流量</string>
    <string name="dicount_coupon">优惠券</string>
    <string name="teenager_mode">青少年模式</string>
    <string name="view_more">查看更多</string>
    <string name="songlist_recommend">推荐歌单</string>
    <string name="choose_carefully_for_you">为你精挑细选</string>
    <string name="style_recommend_descreption">你在找的好听华语歌</string>
    <string name="style_recommend">风格推荐</string>
    <string name="play_all">▶播放全部</string>
</resources>
