<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/recommend_function_height"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_weight="@integer/one"
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="center"
            android:background="@drawable/recommend_calender"
            android:layout_marginTop="@dimen/recommend_item_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_item_size" />

        <TextView
            android:textSize="@dimen/recommend_text_size"
            android:text="@string/recommend_calender"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/recommend_text_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_text_height" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="@integer/one"
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="center"
            android:background="@drawable/recommend_songlist"
            android:layout_marginTop="@dimen/recommend_item_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_item_size" />

        <TextView
            android:textSize="@dimen/recommend_text_size"
            android:text="@string/recommend_songlist"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/recommend_text_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_text_height" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="@integer/one"
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="center"
            android:background="@drawable/recommend_rank"
            android:layout_marginTop="@dimen/recommend_item_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_item_size" />

        <TextView
            android:textSize="@dimen/recommend_text_size"
            android:text="@string/recommend_rank"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/recommend_text_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_text_height" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="@integer/one"
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="center"
            android:background="@drawable/recommend_station"
            android:layout_marginTop="@dimen/recommend_item_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_item_size" />

        <TextView
            android:textSize="@dimen/recommend_text_size"
            android:text="@string/recommend_station"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/recommend_text_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_text_height" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="@integer/one"
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="center"
            android:background="@drawable/recommend_live"
            android:layout_marginTop="@dimen/recommend_item_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_item_size" />

        <TextView
            android:textSize="@dimen/recommend_text_size"
            android:text="@string/recommend_live"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/recommend_text_top"
            android:layout_marginStart="@dimen/recommend_item_start"
            android:layout_width="@dimen/recommend_item_size"
            android:layout_height="@dimen/recommend_text_height" />
    </RelativeLayout>



</LinearLayout>